--- a/presentacion-oficial-2024.html
+++ b/presentacion-oficial-2024.html
@@ -122,7 +122,7 @@
                             </div>
                             <div class="card-body">
                                 <span class="text-yellow-dark-custom">
-                                    La presentación que ha sido un éxito de convocatoria, con más de 200 asistentes contó con la participación de autoridades relevantes de Córdoba y donde tras la presentación inicial participaron D. Félix Romero Carrillo, vicepresidente 3 de Diputación de Córdoba. D. Sebastián del Rey, gerente del Instituto Municipal de Deportes de Córdoba IMDECO, Da. Marta Domínguez Escribano, directora de Deportes de la Universidad de Cordoba, Da. Ornela Sara París Checa, delegada Federación Andaluza de Deportes de Montaña, Escalada y Senderismo y Da. Ana García Sánchez, directora de Marketing de SPG.
+                                    La presentación que ha sido un éxito de convocatoria, con más de 200 asistentes contó con la participación de autoridades relevantes de Córdoba y donde tras la presentación inicial participaron D. Félix Romero Carrillo, vicepresidente 3 de Diputación de Córdoba. D. Sebastián del Rey, gerente del Instituto Municipal de Deportes de Córdoba IMDECO, Da. Marta Domínguez Escribano, directora de Deportes de la Universidad de Cordoba, Da. Ornela Sara París Checa, delegada Federación Andaluza de Deportes de Montaña, Escalada y Senderismo y Da. Ana García Sánchez, encargada de comunicación de SPG.
 
                                     El equipo directivo de Califa Mountain Festival, Daniel Rodríguez y Francisco Gil presentaron a los asistentes los datos técnicos de las actividades deportivas que han preparado para la prueba y los patrocinadores de esta III Edición Califa Mountain Festival.
 
