--- a/presentacion-oficial-2024.html
+++ b/presentacion-oficial-2024.html
@@ -164,6 +164,15 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-lg-12 col-12" id="galeria1">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body">
+                                <a href="https://photos.app.goo.gl/zmuC5L3r7K2rQAiv8" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-light-custom-bg text-blue-custom">GALERIA FOTOS 1</a>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- DESCRIPCION -->
                     <div class="col-lg-12 col-12">
                         <div class="card margin-bottom-20px blue-custom-bg border-none">
