--- a/2023.html
+++ b/2023.html
@@ -490,6 +490,9 @@
                         <a href="https://fotoregalopersonalizado.es/" target="_blank"><img src="./images/fotoregalo-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
+                        <a href="https://gruposercolu.com/" target="_blank"><img src="./images/sercolu-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
                         <a href="https://teamergy.es/" target="_blank"><img src="./images/teamergy-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
