--- a/voluntarios.html
+++ b/voluntarios.html
@@ -144,18 +144,22 @@
                                     - Pensión completa ( desayuno, almuerzo, cena)
                                 </div><div class="text-yellow-dark-custom">
                                 </div><span>.</span><div class="text-yellow-dark-custom">
-                                    GRACIAS A TOD@S - SOIS EQUIPO CALIFA</span> !
+                                    GRACIAS A TOD@S
+                                </div><div class="text-yellow-dark-custom">
+                                    SOIS EL CORAZÓN QUE CUIDA A TODOS LOS PARTICIPANTES
+                                </div><div class="text-yellow-dark-custom">
+                                    SOIS EQUIPO CALIFA</span> !
                                 </div><div class="text-yellow-dark-custom">
                                 </div><span>.</span><div class="text-yellow-dark-custom">
                                     #HazteCalifa
                                 </div><div class="text-yellow-dark-custom">
                                     #CalifaMountainFestival #TrailRunning #Carreras #Montaña #Deporte
-                                </div>
-                                <div class="col-12">
-                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSe69prhwjptexE9iShqaoNm5hOFhZnwbm24jNMiSN3v9Xsl1Q/viewform" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Completar Formulario aquí</a>
+                                </div><span>.</span><div class="text-yellow-dark-custom">
+                                    <div class="col-12">
+                                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSe69prhwjptexE9iShqaoNm5hOFhZnwbm24jNMiSN3v9Xsl1Q/viewform" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Completar Formulario aquí. QUIERO SER CALIFA</a>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
                     </div>
                 </div>
             </div>
