--- a/2024.html
+++ b/2024.html
@@ -182,6 +182,9 @@
                             <div class="card-body">
                                 <h5 class="card-title text-blue-custom">Documentos</h5>
                                 <a href="2024/reglamento.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Reglamento</a>
+                                <a href="2024/gpx/etapa2.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Track PROVISIONAL GPX Etapa 2</a>
+                                <a href="2024/gpx/etapa3.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Track PROVISIONAL GPX Etapa 3</a>
+                                <a href="2024/gpx/senderismo.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Track PROVISIONAL GPX Senderismo</a>
                             </div>
                         </div>
 
@@ -226,6 +229,7 @@
                                                 </div>
                                             </div>
                                             <a href="#inscripciones" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Inscríbete aquí</a>
+                                            <a href="2024/gpx/etapa2.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Track PROVISIONAL GPX Etapa 2</a>
 
                                         </div>
                                     </div>
@@ -247,6 +251,7 @@
                                                 </div>
                                             </div>
                                             <a href="#inscripciones" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Inscríbete aquí</a>
+                                            <a href="2024/gpx/etapa3.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Track PROVISIONAL GPX Etapa 3</a>
 
                                         </div>
                                     </div>
@@ -267,6 +272,7 @@
                                                     <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: 16 años (en caso de ser menores de 16 años tendrán que ir acompañados de un adulto bajo su responsabilidad)</p>
                                                 </div>
                                                 <a href="https://www.deporticket.com/web-formulario/26058-inscripcion-senderismo" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Inscríbete aquí</a>
+                                                <a href="2024/gpx/senderismo.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Track PROVISIONAL GPX Senderismo</a>
 
                                             </div>
                                         </div>
