--- a/index.html
+++ b/index.html
@@ -162,6 +162,52 @@
             </div>
         </section>
 
+        <section class="about-section section-padding" id="quedadabrooks">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="mb-lg-0 text-yellow-dark-custom">QUEDADA BROOKS TEST ZAPATILLAS 2024</h2>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.deporticket.com/web-formulario/27722-inscripcion-quedada-brooks" target="_blank"><img src="./images/brooks-califa24.jpg" style="width:100%; height: auto" /></a>
+                        <div class="col-12">
+                            <a href="https://www.deporticket.com/web-formulario/27722-inscripcion-quedada-brooks" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">APÚNTATE AQUÍ</a>
+                        </div>
+                    </div>
+                    <div class="col-9">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body">
+                                <div class="text-yellow-dark-custom">
+                                    Quedada TEST de ZAPATILLAS by BROOKS !
+                                </div><div class="text-yellow-dark-custom">
+                                </div><span>.</span><div class="text-yellow-dark-custom">
+                                    El próximo jueves 5 de septiembre 2024
+                                </div><div class="text-yellow-dark-custom">
+                                </div><span>.</span><div class="text-yellow-dark-custom">
+
+                                    20:00h en la Plaza de Andalucía de Cerro Muriano (Córdoba)
+                                </div><div class="text-yellow-dark-custom">
+                                    La oportunidad perfecta para probar las Brooks Cascadia y hacer parte del recorrido de la Etapa 1 de Califa Mountain Festival.
+                                    Realizaremos una salida de 4.5K 200+/200-
+                                    No olvides tu frontal si lo tienes !!!
+                                </div><div class="text-yellow-dark-custom">
+                                    Si al inscribirte no quedasen zapas de tu talla, vente igualmente por si alguien falla a última hora
+
+                                </div><div class="text-yellow-dark-custom">
+                                </div><span>.</span><div class="text-yellow-dark-custom">
+                                    Gracias a Deportes Fernando Pineda por traernos a Brooks !
+
+                                </div><span>.</span><div class="text-yellow-dark-custom">
+                                    <div class="col-12">
+                                        <a href="https://www.deporticket.com/web-formulario/27722-inscripcion-quedada-brooks" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">APÚNTATE aquí</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+
         <section class="about-section section-padding yellow-dark-custom-bg" id="ediciones-anteriores">
             <div class="container">
                 <div class="row">
