--- a/2024.html
+++ b/2024.html
@@ -310,8 +310,8 @@
                                             <div class="">
                                                 <div>
                                                     <p class="text-white">Senderismo No Competitivo</p>
-                                                    <p class="text-white"><i class="bi bi-cursor"></i>14k</p>
-                                                    <p class="text-white"><i class="bi bi-triangle-half"></i> 500+ | 500-</p>
+                                                    <p class="text-white"><i class="bi bi-cursor"></i>13k</p>
+                                                    <p class="text-white"><i class="bi bi-triangle-half"></i> 400+ | 400-</p>
                                                     <p class="text-white"><i class="bi bi-calendar3"></i> Sábado 21 Sept. 2024</p>
                                                     <p class="text-white"><i class="bi bi-clock"></i> 8:30h</p>
                                                     <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Polideportivo Municipal, Cerro Muriano (Córdoba)</p>
@@ -349,29 +349,25 @@
                                         <h5 class="card-title text-yellow-dark-custom"><i class="bi bi-emoji-smile"></i> KIDs infantil - Sábado</h5>
 
                                         <hr class="hr hr-blurry text-white" />
-
-                                        <div class="col-lg-12 col-12">
-                                            <div class="">
-                                                <div>
-                                                    <p class="text-white">Carrera y Entrenamiento Trail No Competitivo</p>
-                                                    <p class="text-white"><i class="bi bi-cursor"></i>Duración aprox. 1:30h</p>
-                                                    <p class="text-white"><i class="bi bi-calendar3"></i> Sábado 21 Sept. 2024</p>
-                                                    <p class="text-white"><i class="bi bi-clock"></i> 10:00h</p>
-                                                    <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Polideportivo Municipal, Cerro Muriano (Córdoba)</p>
-                                                    <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: sin edad mínima, se adaptarán las actividades</p>
-                                                </div>
+                                        <div class="row">
+                                            <div class="col-3">
+                                                <a href="https://www.deporticket.com/web-formulario/26059-inscripcion-infantil" target="_blank"><img src="./2024/cartel-cross.jpg" style="width:100%; height: auto" /></a>
                                             </div>
-                                        </div>
-                                        <hr class="hr hr-blurry text-white" />
-                                        <div class="col-lg-12 col-12">
-                                            <div class="">
-                                                <div>
-                                                    <p class="text-white">Iniciación a la Orientación No Competitiva</p>
-                                                    <p class="text-white"><i class="bi bi-cursor"></i>Duración aprox. 1:30h</p>
-                                                    <p class="text-white"><i class="bi bi-calendar3"></i> Sábado 21 Sept. 2024</p>
-                                                    <p class="text-white"><i class="bi bi-clock"></i> 11:30h</p>
-                                                    <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Polideportivo Municipal, Cerro Muriano (Córdoba)</p>
-                                                    <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: sin edad mínima, se adaptarán las actividades</p>
+                                            <div class="col-9">
+                                                <div class="">
+                                                    <div>
+                                                        <p class="text-white">Cross infantil No Competitivo</p>
+                                                        <p class="text-yellow-dark-custom">Medalla y camiseta para todos</p>
+                                                        <p class="text-white"><i class="bi bi-calendar3"></i> Sábado 21 Sept. 2024</p>
+                                                        <p class="text-white"><i class="bi bi-clock"></i> 10:00h</p>
+                                                        <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Polideportivo Municipal, Cerro Muriano (Córdoba)</p>
+                                                        <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: sin edad mínima</p>
+                                                        <p class="text-yellow-dark-custom"><i class="bi bi-cursor"></i>SuperPeques 150m (recta meta)</p>
+                                                        <p class="text-yellow-dark-custom"><i class="bi bi-cursor"></i>Sub8 300m (recta meta)</p>
+                                                        <p class="text-yellow-dark-custom"><i class="bi bi-cursor"></i>Sub10 600m (1 vuelta) GUIADO/MONITOR</p>
+                                                        <p class="text-yellow-dark-custom"><i class="bi bi-cursor"></i>Sub12/14 1200m (2 vueltas 600m) GUIADO/MONITOR</p>
+                                                        <p class="text-yellow-dark-custom"><i class="bi bi-cursor"></i>Sub16/18 1500m (1 vuelta 1500m) GUIADO/MONITOR</p>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -449,7 +445,7 @@
                                                     <td class="table-background-image-wrap senderismo-background-image">
                                                         <h3>Senderismo</h3>
 
-                                                        <p class="mb-2">14K 500+/500-</p>
+                                                        <p class="mb-2">13K 400+/400-</p>
 
                                                         <p>8:30</p>
 
@@ -477,15 +473,13 @@
                                                 </tr>
 
                                                 <tr>
-                                                    <th scope="row">Actividades Deportivas Infantiles</th>
+                                                    <th scope="row">Cross Infantil</th>
 
                                                     <td style="background-color: #ECC9C7"></td>
 
                                                     <td class="table-background-image-wrap infantil-background-image">
-                                                        <h3>Entrenamiento Trail</h3>
+                                                        <h3>Cross infantil PARTICIPATIVO</h3>
                                                         <p>10:00</p>
-                                                        <h3>Iniciación Orientación</h3>
-                                                        <p>11:30</p>
                                                         <div class="section-overlay"></div>
                                                     </td>
 
