--- a/quedadabrooks.html
+++ b/quedadabrooks.html
@@ -333,6 +333,9 @@ No olvides tu frontal si lo tienes !!!
                         <a href="https://gruposercolu.com/" target="_blank"><img src="./images/sercolu-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
+                        <a href="https://lavanderiaposadas.es/servicio-alquiler-renting-textil/" target="_blank"><img src="./images/rentingtextil-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
                         <a href="https://teamergy.es/" target="_blank"><img src="./images/teamergy-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
