--- a/2024.html
+++ b/2024.html
@@ -181,6 +181,7 @@
                         <div class="card margin-bottom-20px yellow-dark-custom-bg">
                             <div class="card-body">
                                 <h5 class="card-title text-blue-custom">Documentos</h5>
+                                <a href="2024/AutorizacionDorsalesCalifaMountainFestival.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Autorización recoger dorsal</a>
                                 <a href="2024/reglamento.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Reglamento</a>
                                 <a href="2024/gpx/etapa2.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Track PROVISIONAL GPX Etapa 2</a>
                                 <a href="2024/gpx/etapa3.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Track PROVISIONAL GPX Etapa 3</a>
