--- a/contacto.html
+++ b/contacto.html
@@ -357,6 +357,9 @@
                         <a href="https://lavanderiaposadas.es/servicio-alquiler-renting-textil/" target="_blank"><img src="./images/rentingtextil-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
+                        <a href="https://mcdonalds.es/" target="_blank"><img src="./images/mcdonald-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
                         <a href="https://teamergy.es/" target="_blank"><img src="./images/teamergy-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
