--- a/blog.html
+++ b/blog.html
@@ -348,10 +348,13 @@
                         <a href="https://fotoregalopersonalizado.es/" target="_blank"><img src="./images/fotoregalo-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
-                        <div class="col-2">
-                            <a href="https://lavanderiaposadas.es/servicio-alquiler-renting-textil/" target="_blank"><img src="./images/rentingtextil-logo-blanco.png" style="width:100%; height: auto" /></a>
-                        </div>
                         <a href="https://gruposercolu.com/" target="_blank"><img src="./images/sercolu-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://lavanderiaposadas.es/servicio-alquiler-renting-textil/" target="_blank"><img src="./images/rentingtextil-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://mcdonalds.es/" target="_blank"><img src="./images/mcdonald-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
                         <a href="https://teamergy.es/" target="_blank"><img src="./images/teamergy-logo-blanco.png" style="width:100%; height: auto" /></a>
