--- a/2024.html
+++ b/2024.html
@@ -175,6 +175,14 @@
                                         <a href="https://www.deporticket.com/web-formulario/26059-inscripcion-infantil" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Califa Mountain KIDs Sábado</a>
                                     </div>
                                 </div>
+
+                                <div class="card margin-bottom-20px red-custom-bg border-none" id="inscripcion-varias">
+                                    <div class="card-body">
+                                        <h5 class="card-title text-white">Otras Inscripciones</h5>
+                                        <a href="https://www.deporticket.com/web-formulario/27835-pago-seguro" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Pago SEGURO</a>
+                                        <a href="https://www.deporticket.com/web-formulario/27721-inscripcion-charlas-ponencias" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Ponencias Charlas</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
