--- a/index.html
+++ b/index.html
@@ -162,6 +162,33 @@
             </div>
         </section>
 
+
+        <section class="about-section section-padding" id="quedadabrooks">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="mb-lg-0 text-yellow-dark-custom">ÚLTIMAS INSCRIPCIONES DISPONIBLES</h2>
+                    </div>
+                    <div class="col-6">
+                        <a href="2024#inscripciones" target="_blank"><img src="./2024/extra-dorsales.jpg" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-6">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body">
+                                <div class="text-yellow-dark-custom">
+                                    Solo hasta domingo 15 septiembre a las 20:00h
+
+                                </div><span>.</span><div class="text-yellow-dark-custom">
+                                    <div class="col-12">
+                                        <a href="2024#inscripciones" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">APÚNTATE aquí</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+
         <section class="about-section section-padding" id="info-actividades">
             <div class="card margin-bottom-20px">
                 <div class="card-body" id="etapas">
