--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
             </div>
         </nav>
-
+        <!--
 
         <section class="hero-section" id="2024">
             <div class="section-overlay"></div>
@@ -161,9 +161,16 @@
                 </video>
             </div>
         </section>
-
-
-        <section class="about-section section-padding" id="quedadabrooks">
+            -->
+        <section class="about-section section-padding" id="noticias">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="about-section section-padding" id="noticias">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -184,6 +191,23 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+
+        <section class="about-section section-padding" id="noticias">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="mb-lg-0 text-yellow-dark-custom">GUIA PARTICIPANTE</h2>
+                    </div>
+                    <div class="col-12">
+                        <a href="./2024/guia-participante-califa-24.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">DESCARGA</a>
+                    </div>
+                    <div class="col-12">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <iframe allowfullscreen="allowfullscreen" scrolling="no" class="fp-iframe" src="guia.html" style="border: 0px; width: 100%; height: 400px;"></iframe>
                         </div>
                     </div>
                 </div>
