--- a/index.html
+++ b/index.html
@@ -204,6 +204,8 @@
                     </div>
                     <div class="col-12">
                         <a href="./2024/guia-participante-califa-24.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">DESCARGA</a>
+                        <a href="guia.html" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">VER EN GRANDE</a>
+
                     </div>
                     <div class="col-12">
                         <div class="card margin-bottom-20px blue-custom-bg border-none">
