--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
         </section>
             -->
-        <section class="about-section section-padding" id="noticias">
+        <section class="about-section section-padding" id="gap">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -170,31 +170,33 @@
                 </div>
             </div>
         </section>
-        <section class="about-section section-padding" id="noticias">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <h2 class="mb-lg-0 text-yellow-dark-custom">ÚLTIMAS INSCRIPCIONES DISPONIBLES</h2>
-                    </div>
-                    <div class="col-6">
-                        <a href="2024#inscripciones" target="_blank"><img src="./2024/extra-dorsales.jpg" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-6">
-                        <div class="card margin-bottom-20px blue-custom-bg border-none">
-                            <div class="card-body">
-                                <div class="text-yellow-dark-custom">
-                                    Solo hasta domingo 15 septiembre a las 20:00h
 
-                                </div><span>.</span><div class="text-yellow-dark-custom">
-                                    <div class="col-12">
-                                        <a href="2024#inscripciones" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">APÚNTATE aquí</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+        <section class="about-section section-padding" id="inscripciones">
+            <div class="card margin-bottom-20px red-custom-bg border-none" id="inscripcion-varias">
+                <div class="card-body">
+                    <h5 class="card-title text-white">Inscripciones aún abiertas</h5>
+                    <a href="https://www.deporticket.com/web-formulario/26059-inscripcion-infantil" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Cross INFANTIL</a>
+                    <a href="https://www.deporticket.com/web-formulario/26051-inscripcion-marcha-nordica" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Marcha NORDICA</a>
+                    <a href="https://www.deporticket.com/web-formulario/27721-inscripcion-charlas-ponencias" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Ponencias Charlas GRATUITAS</a>
+
+                    <a href="https://www.deporticket.com/web-formulario/27835-pago-seguro" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Pago SEGURO</a>
                 </div>
+            </div>
+
+            <div class="card margin-bottom-20px red-custom-bg border-none">
+                <div class="card-body">
+                    <h5 class="card-title text-white">Documentos y Archivos</h5>
+                    <a href="./2024/guia-participante-califa-24.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Guia</a>
+                    <a href="2024/AutorizacionDorsalesCalifaMountainFestival.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Autorización recoger dorsal</a>
+                    <a href="2024/reglamento.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Reglamento</a>
+                    <a class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-blue-custom">Track Etapa 1 PRIVADO</a>
+                    <a href="2024/gpx/etapa2.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Track GPX Etapa 2</a>
+                    <a href="2024/gpx/etapa3.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Track GPX Etapa 3</a>
+                    <a href="2024/gpx/senderismo.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Track GPX Senderismo</a>
+                </div>
+            </div>
         </section>
+
 
         <section class="about-section section-padding" id="noticias">
             <div class="container">
@@ -213,6 +215,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
 
         <section class="about-section section-padding" id="info-actividades">
