--- a/index.html
+++ b/index.html
@@ -172,14 +172,15 @@
         </section>
 
         <section class="about-section section-padding" id="inscripciones">
-            <div class="card margin-bottom-20px red-custom-bg border-none" id="inscripcion-varias">
+            <div class="card margin-bottom-20px red-custom-bg border-none">
                 <div class="card-body">
-                    <h5 class="card-title text-white">Inscripciones aún abiertas</h5>
-                    <a href="https://www.deporticket.com/web-formulario/26059-inscripcion-infantil" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Cross INFANTIL</a>
-                    <a href="https://www.deporticket.com/web-formulario/26051-inscripcion-marcha-nordica" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Marcha NORDICA</a>
-                    <a href="https://www.deporticket.com/web-formulario/27721-inscripcion-charlas-ponencias" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Ponencias Charlas GRATUITAS</a>
+                    <h5 class="card-title text-white">LISTADOS DE INSCRITOS</h5>
+                    <h4 class="card-title text-blue-custom">Cualquier incidencia enviar email a rsrunningseries@gmail.com o pulsa en el botón que hay debajo</h4>
 
-                    <a href="https://www.deporticket.com/web-formulario/27835-pago-seguro" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Pago SEGURO</a>
+                    <a href="2024/inscritos-alfabetico.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Alfabéticamente</a>
+                    <a href="2024/inscritos-modalidad.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Por Modalidad</a>
+                    <a href="mailto:rsrunningseries@gmail.com;jesusgilcabezas@gmail.com?subject=INCIDENCIA Inscripción" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-red-custom">Comunicar incidencia</a>
+
                 </div>
             </div>
 
@@ -193,6 +194,17 @@
                     <a href="2024/gpx/etapa2.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Track GPX Etapa 2</a>
                     <a href="2024/gpx/etapa3.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Track GPX Etapa 3</a>
                     <a href="2024/gpx/senderismo.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Track GPX Senderismo</a>
+                </div>
+            </div>
+
+            <div class="card margin-bottom-20px red-custom-bg border-none" id="inscripcion-varias">
+                <div class="card-body">
+                    <h5 class="card-title text-white">Inscripciones aún abiertas</h5>
+                    <a href="https://www.deporticket.com/web-formulario/26059-inscripcion-infantil" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Cross INFANTIL</a>
+                    <a href="https://www.deporticket.com/web-formulario/26051-inscripcion-marcha-nordica" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Marcha NORDICA</a>
+                    <a href="https://www.deporticket.com/web-formulario/27721-inscripcion-charlas-ponencias" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Ponencias Charlas GRATUITAS</a>
+
+                    <a href="https://www.deporticket.com/web-formulario/27835-pago-seguro" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Pago SEGURO</a>
                 </div>
             </div>
         </section>
