--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
 
                     <a href="2024/inscritos-alfabetico.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Alfabéticamente</a>
                     <a href="2024/inscritos-modalidad.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">Por Modalidad</a>
-                    <a href="mailto:rsrunningseries@gmail.com;jesusgilcabezas@gmail.com?subject=INCIDENCIA Inscripción" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-red-custom">Comunicar incidencia</a>
+                    <a href="mailto:rsrunningseries@gmail.com;eventoscalifamountainfestival@gmail.com?subject=INCIDENCIA Inscripción" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-red-custom">Comunicar incidencia</a>
+                    <a href="mailto:rsrunningseries@gmail.com;eventoscalifamountainfestival@gmail.com?subject=AUTORIZACIÓN dorsal" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-red-custom">Comunicar autorización</a>
 
                 </div>
             </div>
@@ -778,6 +779,9 @@
                     </div>
                     <div class="col-2">
                         <a href="https://mcdonalds.es/" target="_blank"><img src="./images/mcdonald-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://www.instagram.com/farmacialosjardines/?hl=es" target="_blank"><img src="./images/farmaciajardines-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
                         <a href="https://teamergy.es/" target="_blank"><img src="./images/teamergy-logo-blanco.png" style="width:100%; height: auto" /></a>
