--- a/cordoba-la-llana.html
+++ b/cordoba-la-llana.html
@@ -341,6 +341,9 @@
                         <a href="https://mcdonalds.es/" target="_blank"><img src="./images/mcdonald-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
+                        <a href="https://www.instagram.com/farmacialosjardines/?hl=es" target="_blank"><img src="./images/farmaciajardines-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
                         <a href="https://teamergy.es/" target="_blank"><img src="./images/teamergy-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
