--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="card margin-bottom-20px red-custom-bg border-none">
                 <div class="card-body">
                     <h5 class="card-title text-white">RESULTADOS</h5>
-                    <a href="2024/resultados-etapa1.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 1</a>
+                    <a id="resultados-1" href="2024/resultados-etapa1.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 1</a>
                     <!--<a href="https://www.dropbox.com/scl/fi/sj9ndqrubzy2qtc4hpbn0/CALIFA_ETAPA2.csv?rlkey=g1tusfareyxa7eugcy54prfiv&dl=0" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 - PROVISIONALES</a>-->
                     <!--<a href="2024/salida-domingo.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">HORARIO SALIDA DOMINGO PROVISIONAL</a>-->
                     <!--<a href="https://www.dropbox.com/scl/fi/0oevlqx4k2n6vkb7hjj5a/CALIFA_ETAPA3.csv?rlkey=cd6dyi4i4246igmvit9a51pl2&dl=0" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 - PROVISIONALES</a>-->
