--- a/index.html
+++ b/index.html
@@ -177,9 +177,10 @@
                     <h5 class="card-title text-white">RESULTADOS</h5>
                     <a id="resultados-1" href="2024/resultados-etapa1.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 1</a>
                     <a href="https://www.dropbox.com/scl/fi/sj9ndqrubzy2qtc4hpbn0/CALIFA_ETAPA2.csv?rlkey=g1tusfareyxa7eugcy54prfiv&dl=0" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 - PROVISIONALES</a>
-                    <a href="https://www.dropbox.com/scl/fi/0t0wr4e6hec7bisd82gyu/CALIFA_GENERAL_PROVISIONAL.pdf?rlkey=6woelbebt3088ut54d0v10oby&dl=0" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">GENERAL 3 ETAPAS - PROVISIONALES</a>
                     <a href="2024/salida-etapa3.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">HORARIO SALIDA ETAPA 3</a>
-                    <a href="https://www.dropbox.com/scl/fi/0oevlqx4k2n6vkb7hjj5a/CALIFA_ETAPA3.csv?rlkey=cd6dyi4i4246igmvit9a51pl2&dl=0" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 - PROVISIONALES</a>
+                    <a href="https://www.dropbox.com/scl/fi/d27ttyqlep39vhriywh91/CALIFA_MOUNTAIN_FESTIVAL_ETAPA3.pdf?rlkey=8q46dvmmu9o75lyfztf6et7o1&e=1&dl=0" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 - PROVISIONALES</a>
+                    <a href="https://www.dropbox.com/scl/fi/0t0wr4e6hec7bisd82gyu/CALIFA_GENERAL_PROVISIONAL.pdf?rlkey=6woelbebt3088ut54d0v10oby&dl=0" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">GENERAL 3 ETAPAS - PROVISIONALES</a>
+
                 </div>
             </div>
         </section>
